--- a/InsuranceProject/pom.xml
+++ b/InsuranceProject/pom.xml
@@ -9,6 +9,20 @@
 		<spring.version>5.0.6.RELEASE</spring.version>
 		<hibernate.version>5.3.1.Final</hibernate.version>
 	</properties>
+	
+<build>
+    <plugins>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
+    </plugins>
+</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -29,6 +43,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
+			<!-- <scope>provided</scope> -->
 		</dependency>
 
 		<!-- JSTL -->
